01_gateway_api/docker-desktop-mount-fix.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cilium-mount-fix
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: cilium-mount-fix
  template:
    metadata:
      labels:
        app: cilium-mount-fix
    spec:
      hostPID: true
      hostNetwork: true
      containers:
        - name: sleep
          image: alpine:latest
          command: ["sleep", "infinity"]
